# proplist

./: CMakeLists.txt  main.cpp  proplist.h
